add a message list to view messages

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
-  font-size: calc(10px + 2vmin);
   text-align: center;
   background-color: #282c34;
+  color: #ccc;
   display: flex;
   flex-direction: column;
   align-items: stretch;
